# MwRs

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  TODO
example/: CMakeLists.txt  example_client.cpp  example_server.cpp
include/: mwrs.h  mwrs_client.h  mwrs_server.h
src/: mwrs_client.cpp  mwrs_messages.hpp  mwrs_server.cpp
